--- a/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 58,
+      "line": 62,
       "column": 13,
-      "index": 3060
+      "index": 3324
     },
     "end": {
-      "line": 61,
+      "line": 65,
       "column": 3,
-      "index": 3133
+      "index": 3397
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Token swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 62,
+      "line": 66,
       "column": 13,
-      "index": 3148
+      "index": 3412
     },
     "end": {
-      "line": 65,
+      "line": 69,
       "column": 3,
-      "index": 3230
+      "index": 3494
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 66,
+      "line": 70,
       "column": 13,
-      "index": 3245
+      "index": 3509
     },
     "end": {
-      "line": 69,
+      "line": 73,
       "column": 3,
-      "index": 3324
+      "index": 3588
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Market Button",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 70,
+      "line": 74,
       "column": 16,
-      "index": 3342
+      "index": 3606
     },
     "end": {
-      "line": 73,
+      "line": 77,
       "column": 3,
-      "index": 3427
+      "index": 3691
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Limit",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 74,
+      "line": 78,
       "column": 15,
-      "index": 3444
+      "index": 3708
     },
     "end": {
-      "line": 77,
+      "line": 81,
       "column": 3,
-      "index": 3520
+      "index": 3784
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Swap from",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 78,
+      "line": 82,
       "column": 12,
-      "index": 3534
+      "index": 3798
     },
     "end": {
-      "line": 81,
+      "line": 85,
       "column": 3,
-      "index": 3611
+      "index": 3875
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Swap to",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 82,
+      "line": 86,
       "column": 10,
-      "index": 3623
+      "index": 3887
     },
     "end": {
-      "line": 85,
+      "line": 89,
       "column": 3,
-      "index": 3696
+      "index": 3960
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!Current Balance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 86,
+      "line": 90,
       "column": 18,
-      "index": 3716
+      "index": 3980
     },
     "end": {
-      "line": 89,
+      "line": 93,
       "column": 3,
-      "index": 3805
+      "index": 4069
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!Select Token",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 90,
+      "line": 94,
       "column": 15,
-      "index": 3822
+      "index": 4086
     },
     "end": {
-      "line": 93,
+      "line": 97,
       "column": 3,
-      "index": 3905
+      "index": 4169
     }
   },
   {
@@ -139,14 +139,29 @@
     "defaultMessage": "!!!Market Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 94,
+      "line": 98,
       "column": 15,
-      "index": 3922
+      "index": 4186
     },
     "end": {
-      "line": 97,
+      "line": 101,
       "column": 3,
-      "index": 4005
+      "index": 4269
+    }
+  },
+  {
+    "id": "swap.swapScreen.limitPrice",
+    "defaultMessage": "!!!Limit Price",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 102,
+      "column": 14,
+      "index": 4285
+    },
+    "end": {
+      "line": 105,
+      "column": 3,
+      "index": 4366
     }
   },
   {
@@ -154,14 +169,14 @@
     "defaultMessage": "!!!Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 98,
+      "line": 106,
       "column": 21,
-      "index": 4028
+      "index": 4389
     },
     "end": {
-      "line": 101,
+      "line": 109,
       "column": 3,
-      "index": 4123
+      "index": 4484
     }
   },
   {
@@ -169,14 +184,14 @@
     "defaultMessage": "!!!Slippage must be a number between 0 and 100 and have up to 1 decimal",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 102,
+      "line": 110,
       "column": 26,
-      "index": 4151
+      "index": 4512
     },
     "end": {
-      "line": 105,
+      "line": 113,
       "column": 3,
-      "index": 4301
+      "index": 4662
     }
   },
   {
@@ -184,14 +199,14 @@
     "defaultMessage": "!!!Slippage Tolerance Info",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 106,
+      "line": 114,
       "column": 25,
-      "index": 4328
+      "index": 4689
     },
     "end": {
-      "line": 109,
+      "line": 117,
       "column": 3,
-      "index": 4432
+      "index": 4793
     }
   },
   {
@@ -199,14 +214,14 @@
     "defaultMessage": "!!!Verified by {pool}",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 110,
+      "line": 118,
       "column": 14,
-      "index": 4448
+      "index": 4809
     },
     "end": {
-      "line": 113,
+      "line": 121,
       "column": 3,
-      "index": 4536
+      "index": 4897
     }
   },
   {
@@ -214,14 +229,14 @@
     "defaultMessage": "!!!This assets is in my portfolio",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 114,
+      "line": 122,
       "column": 12,
-      "index": 4550
+      "index": 4911
     },
     "end": {
-      "line": 117,
+      "line": 125,
       "column": 3,
-      "index": 4648
+      "index": 5009
     }
   },
   {
@@ -229,14 +244,14 @@
     "defaultMessage": "!!!Default Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 118,
+      "line": 126,
       "column": 19,
-      "index": 4669
+      "index": 5030
     },
     "end": {
-      "line": 121,
+      "line": 129,
       "column": 3,
-      "index": 4770
+      "index": 5131
     }
   },
   {
@@ -244,14 +259,14 @@
     "defaultMessage": "!!!Slippage tolerance is set as a percentage of the total swap value.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 122,
+      "line": 130,
       "column": 16,
-      "index": 4788
+      "index": 5149
     },
     "end": {
-      "line": 125,
+      "line": 133,
       "column": 3,
-      "index": 4926
+      "index": 5287
     }
   },
   {
@@ -259,29 +274,59 @@
     "defaultMessage": "!!!Min-ADA is the minimum ADA amount required to be contained when holding or sending Cardano native tokens.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 126,
+      "line": 134,
       "column": 14,
-      "index": 4942
+      "index": 5303
     },
     "end": {
-      "line": 130,
+      "line": 138,
       "column": 3,
-      "index": 5123
+      "index": 5484
+    }
+  },
+  {
+    "id": "swap.swapScreen.swapMinAdaTitle",
+    "defaultMessage": "!!!Min ADA",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 139,
+      "column": 19,
+      "index": 5505
+    },
+    "end": {
+      "line": 142,
+      "column": 3,
+      "index": 5587
     }
   },
   {
     "id": "swap.swapScreen.swapFees",
-    "defaultMessage": "!!!Swap fees include the following:\n   • Matchmaker Fee\n   • Frontend Fee\n   • Liquidity Provider Fee",
+    "defaultMessage": "!!!Swap fees include the following:\n • Matchmaker Fee\n • Frontend Fee\n • Liquidity Provider Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 131,
+      "line": 143,
       "column": 12,
-      "index": 5137
+      "index": 5601
     },
     "end": {
-      "line": 137,
+      "line": 146,
       "column": 3,
-      "index": 5303
+      "index": 5764
+    }
+  },
+  {
+    "id": "swap.swapScreen.swapFeesTitle",
+    "defaultMessage": "!!!Fee",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 147,
+      "column": 17,
+      "index": 5783
+    },
+    "end": {
+      "line": 150,
+      "column": 3,
+      "index": 5859
     }
   },
   {
@@ -289,14 +334,29 @@
     "defaultMessage": "!!!Minimum amount of tokens you can get because of the slippage tolerance.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 138,
+      "line": 151,
       "column": 19,
-      "index": 5324
+      "index": 5880
     },
     "end": {
-      "line": 141,
+      "line": 154,
       "column": 3,
-      "index": 5470
+      "index": 6026
+    }
+  },
+  {
+    "id": "swap.swapScreen.swapMinReceivedTitle",
+    "defaultMessage": "!!!Min Received",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 155,
+      "column": 24,
+      "index": 6052
+    },
+    "end": {
+      "line": 158,
+      "column": 3,
+      "index": 6144
     }
   },
   {
@@ -304,14 +364,14 @@
     "defaultMessage": "!!!Enter a value from 0% to 100%. You can also enter up to 1 decimal",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 142,
+      "line": 159,
       "column": 17,
-      "index": 5489
+      "index": 6163
     },
     "end": {
-      "line": 145,
+      "line": 162,
       "column": 3,
-      "index": 5627
+      "index": 6301
     }
   },
   {
@@ -319,14 +379,14 @@
     "defaultMessage": "!!!{pool} verification",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 146,
+      "line": 163,
       "column": 20,
-      "index": 5649
+      "index": 6323
     },
     "end": {
-      "line": 149,
+      "line": 166,
       "column": 3,
-      "index": 5744
+      "index": 6418
     }
   },
   {
@@ -334,14 +394,14 @@
     "defaultMessage": "!!!Cardano projects that list their own tokens can apply for an additional {pool} verification. This verification is a manual validation that {pool} team performs with the help of Cardano Foundation.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 150,
+      "line": 167,
       "column": 24,
-      "index": 5770
+      "index": 6444
     },
     "end": {
-      "line": 154,
+      "line": 171,
       "column": 3,
-      "index": 6052
+      "index": 6726
     }
   },
   {
@@ -349,14 +409,14 @@
     "defaultMessage": "!!!No assets found for this pair",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 155,
+      "line": 172,
       "column": 17,
-      "index": 6071
+      "index": 6745
     },
     "end": {
-      "line": 158,
+      "line": 175,
       "column": 3,
-      "index": 6173
+      "index": 6847
     }
   },
   {
@@ -364,14 +424,14 @@
     "defaultMessage": "!!!Each verified tokens gets",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 159,
+      "line": 176,
       "column": 21,
-      "index": 6196
+      "index": 6870
     },
     "end": {
-      "line": 162,
+      "line": 179,
       "column": 3,
-      "index": 6298
+      "index": 6972
     }
   },
   {
@@ -379,14 +439,14 @@
     "defaultMessage": "!!!verified badge",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 163,
+      "line": 180,
       "column": 17,
-      "index": 6317
+      "index": 6991
     },
     "end": {
-      "line": 166,
+      "line": 183,
       "column": 3,
-      "index": 6404
+      "index": 7078
     }
   },
   {
@@ -394,14 +454,14 @@
     "defaultMessage": "!!!Open orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 167,
+      "line": 184,
       "column": 14,
-      "index": 6420
+      "index": 7094
     },
     "end": {
-      "line": 170,
+      "line": 187,
       "column": 3,
-      "index": 6501
+      "index": 7175
     }
   },
   {
@@ -409,14 +469,14 @@
     "defaultMessage": "!!!Completed orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 171,
+      "line": 188,
       "column": 19,
-      "index": 6522
+      "index": 7196
     },
     "end": {
-      "line": 174,
+      "line": 191,
       "column": 3,
-      "index": 6613
+      "index": 7287
     }
   },
   {
@@ -424,14 +484,14 @@
     "defaultMessage": "!!!Asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 175,
+      "line": 192,
       "column": 9,
-      "index": 6624
+      "index": 7298
     },
     "end": {
-      "line": 178,
+      "line": 195,
       "column": 3,
-      "index": 6697
+      "index": 7371
     }
   },
   {
@@ -439,14 +499,14 @@
     "defaultMessage": "!!!Clear",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 179,
+      "line": 196,
       "column": 9,
-      "index": 6708
+      "index": 7382
     },
     "end": {
-      "line": 182,
+      "line": 199,
       "column": 3,
-      "index": 6769
+      "index": 7443
     }
   },
   {
@@ -454,14 +514,14 @@
     "defaultMessage": "!!!Sign transaction",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 183,
+      "line": 200,
       "column": 19,
-      "index": 6790
+      "index": 7464
     },
     "end": {
-      "line": 186,
+      "line": 203,
       "column": 3,
-      "index": 6872
+      "index": 7546
     }
   },
   {
@@ -469,14 +529,14 @@
     "defaultMessage": "!!!Spending Password",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 187,
+      "line": 204,
       "column": 20,
-      "index": 6894
+      "index": 7568
     },
     "end": {
-      "line": 190,
+      "line": 207,
       "column": 3,
-      "index": 6978
+      "index": 7652
     }
   },
   {
@@ -484,14 +544,14 @@
     "defaultMessage": "!!!Enter spending password to sign this transaction",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 191,
+      "line": 208,
       "column": 25,
-      "index": 7005
+      "index": 7679
     },
     "end": {
-      "line": 194,
+      "line": 211,
       "column": 3,
-      "index": 7125
+      "index": 7799
     }
   },
   {
@@ -499,14 +559,14 @@
     "defaultMessage": "!!!Sign",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 195,
+      "line": 212,
       "column": 8,
-      "index": 7135
+      "index": 7809
     },
     "end": {
-      "line": 198,
+      "line": 215,
       "column": 3,
-      "index": 7194
+      "index": 7868
     }
   },
   {
@@ -514,14 +574,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 199,
+      "line": 216,
       "column": 14,
-      "index": 7210
+      "index": 7884
     },
     "end": {
-      "line": 202,
+      "line": 219,
       "column": 3,
-      "index": 7269
+      "index": 7943
     }
   },
   {
@@ -529,14 +589,14 @@
     "defaultMessage": "!!!You have",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 205,
+      "line": 222,
       "column": 11,
-      "index": 7328
+      "index": 8002
     },
     "end": {
-      "line": 208,
+      "line": 225,
       "column": 3,
-      "index": 7423
+      "index": 8097
     }
   },
   {
@@ -544,14 +604,14 @@
     "defaultMessage": "!!!No assets found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 209,
+      "line": 226,
       "column": 12,
-      "index": 7437
+      "index": 8111
     },
     "end": {
-      "line": 212,
+      "line": 229,
       "column": 3,
-      "index": 7540
+      "index": 8214
     }
   },
   {
@@ -559,14 +619,14 @@
     "defaultMessage": "!!!found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 213,
+      "line": 230,
       "column": 9,
-      "index": 7551
+      "index": 8225
     },
     "end": {
-      "line": 216,
+      "line": 233,
       "column": 3,
-      "index": 7641
+      "index": 8315
     }
   },
   {
@@ -574,14 +634,14 @@
     "defaultMessage": "!!!Search tokens",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 217,
+      "line": 234,
       "column": 16,
-      "index": 7659
+      "index": 8333
     },
     "end": {
-      "line": 220,
+      "line": 237,
       "column": 3,
-      "index": 7755
+      "index": 8429
     }
   },
   {
@@ -589,14 +649,14 @@
     "defaultMessage": "!!!Select asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 221,
+      "line": 238,
       "column": 20,
-      "index": 7777
+      "index": 8451
     },
     "end": {
-      "line": 224,
+      "line": 241,
       "column": 3,
-      "index": 7866
+      "index": 8540
     }
   },
   {
@@ -604,14 +664,14 @@
     "defaultMessage": "!!!Confirm",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 225,
+      "line": 242,
       "column": 11,
-      "index": 7879
+      "index": 8553
     },
     "end": {
-      "line": 228,
+      "line": 245,
       "column": 3,
-      "index": 7973
+      "index": 8647
     }
   }
 ]
