--- a/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 58,
+      "line": 67,
       "column": 13,
-      "index": 3036
+      "index": 3576
     },
     "end": {
-      "line": 61,
+      "line": 70,
       "column": 3,
-      "index": 3109
+      "index": 3649
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Token swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 62,
+      "line": 71,
       "column": 13,
-      "index": 3124
+      "index": 3664
     },
     "end": {
-      "line": 65,
+      "line": 74,
       "column": 3,
-      "index": 3206
+      "index": 3746
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 66,
+      "line": 75,
       "column": 13,
-      "index": 3221
+      "index": 3761
     },
     "end": {
-      "line": 69,
+      "line": 78,
       "column": 3,
-      "index": 3300
+      "index": 3840
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Market Button",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 70,
+      "line": 79,
       "column": 16,
-      "index": 3318
+      "index": 3858
     },
     "end": {
-      "line": 73,
+      "line": 82,
       "column": 3,
-      "index": 3403
+      "index": 3943
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Limit",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 74,
+      "line": 83,
       "column": 15,
-      "index": 3420
+      "index": 3960
     },
     "end": {
-      "line": 77,
+      "line": 86,
       "column": 3,
-      "index": 3496
+      "index": 4036
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Swap from",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 78,
+      "line": 87,
       "column": 12,
-      "index": 3510
+      "index": 4050
     },
     "end": {
-      "line": 81,
+      "line": 90,
       "column": 3,
-      "index": 3587
+      "index": 4127
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Swap to",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 82,
+      "line": 91,
       "column": 10,
-      "index": 3599
+      "index": 4139
     },
     "end": {
-      "line": 85,
+      "line": 94,
       "column": 3,
-      "index": 3672
+      "index": 4212
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!Current Balance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 86,
+      "line": 95,
       "column": 18,
-      "index": 3692
+      "index": 4232
     },
     "end": {
-      "line": 89,
+      "line": 98,
       "column": 3,
-      "index": 3781
+      "index": 4321
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!Select Token",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 90,
+      "line": 99,
       "column": 15,
-      "index": 3798
+      "index": 4338
     },
     "end": {
-      "line": 93,
+      "line": 102,
       "column": 3,
-      "index": 3881
+      "index": 4421
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!Market Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 94,
+      "line": 103,
       "column": 15,
-      "index": 3898
+      "index": 4438
     },
     "end": {
-      "line": 97,
+      "line": 106,
       "column": 3,
-      "index": 3981
+      "index": 4521
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Limit Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 98,
+      "line": 107,
       "column": 14,
-      "index": 3997
+      "index": 4537
     },
     "end": {
-      "line": 101,
+      "line": 110,
       "column": 3,
-      "index": 4078
+      "index": 4618
     }
   },
   {
@@ -169,14 +169,14 @@
     "defaultMessage": "!!!Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 102,
+      "line": 111,
       "column": 21,
-      "index": 4101
+      "index": 4641
     },
     "end": {
-      "line": 105,
+      "line": 114,
       "column": 3,
-      "index": 4196
+      "index": 4736
     }
   },
   {
@@ -184,14 +184,14 @@
     "defaultMessage": "!!!Slippage Tolerance Info",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 106,
+      "line": 115,
       "column": 25,
-      "index": 4223
+      "index": 4763
     },
     "end": {
-      "line": 109,
+      "line": 118,
       "column": 3,
-      "index": 4327
+      "index": 4867
     }
   },
   {
@@ -199,14 +199,14 @@
     "defaultMessage": "!!!Verified by {pool}",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 110,
+      "line": 119,
       "column": 14,
-      "index": 4343
+      "index": 4883
     },
     "end": {
-      "line": 113,
+      "line": 122,
       "column": 3,
-      "index": 4431
+      "index": 4971
     }
   },
   {
@@ -214,14 +214,14 @@
     "defaultMessage": "!!!This assets is in my portfolio",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 114,
+      "line": 123,
       "column": 12,
-      "index": 4445
+      "index": 4985
     },
     "end": {
-      "line": 117,
+      "line": 126,
       "column": 3,
-      "index": 4543
+      "index": 5083
     }
   },
   {
@@ -229,14 +229,14 @@
     "defaultMessage": "!!!Default Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 118,
+      "line": 127,
       "column": 19,
-      "index": 4564
+      "index": 5104
     },
     "end": {
-      "line": 121,
+      "line": 130,
       "column": 3,
-      "index": 4665
+      "index": 5205
     }
   },
   {
@@ -244,14 +244,14 @@
     "defaultMessage": "!!!Slippage tolerance is set as a percentage of the total swap value.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 122,
+      "line": 131,
       "column": 16,
-      "index": 4683
+      "index": 5223
     },
     "end": {
-      "line": 125,
+      "line": 134,
       "column": 3,
-      "index": 4821
+      "index": 5361
     }
   },
   {
@@ -259,29 +259,59 @@
     "defaultMessage": "!!!Min-ADA is the minimum ADA amount required to be contained when holding or sending Cardano native tokens.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 126,
+      "line": 135,
       "column": 14,
-      "index": 4837
+      "index": 5377
     },
     "end": {
-      "line": 130,
+      "line": 139,
       "column": 3,
-      "index": 5018
+      "index": 5558
+    }
+  },
+  {
+    "id": "swap.swapScreen.swapMinAdaTitle",
+    "defaultMessage": "!!!Min ADA",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 140,
+      "column": 19,
+      "index": 5579
+    },
+    "end": {
+      "line": 143,
+      "column": 3,
+      "index": 5661
     }
   },
   {
     "id": "swap.swapScreen.swapFees",
-    "defaultMessage": "!!!Swap fees include the following:\n   • Matchmaker Fee\n   • Frontend Fee\n   • Liquidity Provider Fee",
+    "defaultMessage": "!!!Swap fees include the following:\n • Matchmaker Fee\n • Frontend Fee\n • Liquidity Provider Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 131,
+      "line": 144,
       "column": 12,
-      "index": 5032
+      "index": 5675
     },
     "end": {
-      "line": 137,
+      "line": 147,
       "column": 3,
-      "index": 5198
+      "index": 5838
+    }
+  },
+  {
+    "id": "swap.swapScreen.swapFeesTitle",
+    "defaultMessage": "!!!Fee",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 148,
+      "column": 17,
+      "index": 5857
+    },
+    "end": {
+      "line": 151,
+      "column": 3,
+      "index": 5933
     }
   },
   {
@@ -289,14 +319,29 @@
     "defaultMessage": "!!!Minimum amount of tokens you can get because of the slippage tolerance.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 138,
+      "line": 152,
       "column": 19,
-      "index": 5219
+      "index": 5954
     },
     "end": {
-      "line": 141,
+      "line": 155,
       "column": 3,
-      "index": 5365
+      "index": 6100
+    }
+  },
+  {
+    "id": "swap.swapScreen.swapMinReceivedTitle",
+    "defaultMessage": "!!!Min Received",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 156,
+      "column": 24,
+      "index": 6126
+    },
+    "end": {
+      "line": 159,
+      "column": 3,
+      "index": 6218
     }
   },
   {
@@ -304,14 +349,14 @@
     "defaultMessage": "!!!Enter a value from 0% to 100%. You can also enter up to 1 decimal",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 142,
+      "line": 160,
       "column": 17,
-      "index": 5384
+      "index": 6237
     },
     "end": {
-      "line": 145,
+      "line": 163,
       "column": 3,
-      "index": 5522
+      "index": 6375
     }
   },
   {
@@ -319,14 +364,14 @@
     "defaultMessage": "!!!{pool} verification",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 146,
+      "line": 164,
       "column": 20,
-      "index": 5544
+      "index": 6397
     },
     "end": {
-      "line": 149,
+      "line": 167,
       "column": 3,
-      "index": 5639
+      "index": 6492
     }
   },
   {
@@ -334,14 +379,29 @@
     "defaultMessage": "!!!Cardano projects that list their own tokens can apply for an additional {pool} verification. This verification is a manual validation that {pool} team performs with the help of Cardano Foundation.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 150,
+      "line": 168,
       "column": 24,
-      "index": 5665
+      "index": 6518
     },
     "end": {
-      "line": 154,
+      "line": 172,
       "column": 3,
-      "index": 5947
+      "index": 6800
+    }
+  },
+  {
+    "id": "global,price",
+    "defaultMessage": "!!! Price",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 173,
+      "column": 9,
+      "index": 6811
+    },
+    "end": {
+      "line": 176,
+      "column": 3,
+      "index": 6873
     }
   },
   {
@@ -349,14 +409,14 @@
     "defaultMessage": "!!!No assets found for this pair",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 155,
+      "line": 177,
       "column": 17,
-      "index": 5966
+      "index": 6892
     },
     "end": {
-      "line": 158,
+      "line": 180,
       "column": 3,
-      "index": 6068
+      "index": 6994
     }
   },
   {
@@ -364,14 +424,14 @@
     "defaultMessage": "!!!Each verified tokens gets",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 159,
+      "line": 181,
       "column": 21,
-      "index": 6091
+      "index": 7017
     },
     "end": {
-      "line": 162,
+      "line": 184,
       "column": 3,
-      "index": 6193
+      "index": 7119
     }
   },
   {
@@ -379,14 +439,14 @@
     "defaultMessage": "!!!verified badge",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 163,
+      "line": 185,
       "column": 17,
-      "index": 6212
+      "index": 7138
     },
     "end": {
-      "line": 166,
+      "line": 188,
       "column": 3,
-      "index": 6299
+      "index": 7225
     }
   },
   {
@@ -394,14 +454,14 @@
     "defaultMessage": "!!!Open orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 167,
+      "line": 189,
       "column": 14,
-      "index": 6315
+      "index": 7241
     },
     "end": {
-      "line": 170,
+      "line": 192,
       "column": 3,
-      "index": 6396
+      "index": 7322
     }
   },
   {
@@ -409,14 +469,59 @@
     "defaultMessage": "!!!Completed orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 171,
+      "line": 193,
       "column": 19,
-      "index": 6417
+      "index": 7343
     },
     "end": {
-      "line": 174,
+      "line": 196,
       "column": 3,
-      "index": 6508
+      "index": 7434
+    }
+  },
+  {
+    "id": "swap.swapScreen.tvl",
+    "defaultMessage": "!!!TVL",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 197,
+      "column": 7,
+      "index": 7443
+    },
+    "end": {
+      "line": 200,
+      "column": 3,
+      "index": 7509
+    }
+  },
+  {
+    "id": "swap.swapScreen.poolFee",
+    "defaultMessage": "!!! Pool Fee",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 201,
+      "column": 11,
+      "index": 7522
+    },
+    "end": {
+      "line": 204,
+      "column": 3,
+      "index": 7598
+    }
+  },
+  {
+    "id": "swap.swapScreen.batcherFee",
+    "defaultMessage": "!!! Batcher Fee",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 205,
+      "column": 14,
+      "index": 7614
+    },
+    "end": {
+      "line": 208,
+      "column": 3,
+      "index": 7696
     }
   },
   {
@@ -424,14 +529,14 @@
     "defaultMessage": "!!!Asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 175,
+      "line": 209,
       "column": 9,
-      "index": 6519
+      "index": 7707
     },
     "end": {
-      "line": 178,
+      "line": 212,
       "column": 3,
-      "index": 6592
+      "index": 7780
     }
   },
   {
@@ -439,14 +544,14 @@
     "defaultMessage": "!!!Clear",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 179,
+      "line": 213,
       "column": 9,
-      "index": 6603
+      "index": 7791
     },
     "end": {
-      "line": 182,
+      "line": 216,
       "column": 3,
-      "index": 6664
+      "index": 7852
     }
   },
   {
@@ -454,14 +559,14 @@
     "defaultMessage": "!!!Sign transaction",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 183,
+      "line": 217,
       "column": 19,
-      "index": 6685
+      "index": 7873
     },
     "end": {
-      "line": 186,
+      "line": 220,
       "column": 3,
-      "index": 6767
+      "index": 7955
     }
   },
   {
@@ -469,14 +574,14 @@
     "defaultMessage": "!!!Spending Password",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 187,
+      "line": 221,
       "column": 20,
-      "index": 6789
+      "index": 7977
     },
     "end": {
-      "line": 190,
+      "line": 224,
       "column": 3,
-      "index": 6873
+      "index": 8061
     }
   },
   {
@@ -484,14 +589,14 @@
     "defaultMessage": "!!!Enter spending password to sign this transaction",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 191,
+      "line": 225,
       "column": 25,
-      "index": 6900
+      "index": 8088
     },
     "end": {
-      "line": 194,
+      "line": 228,
       "column": 3,
-      "index": 7020
+      "index": 8208
     }
   },
   {
@@ -499,14 +604,14 @@
     "defaultMessage": "!!!Sign",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 195,
+      "line": 229,
       "column": 8,
-      "index": 7030
+      "index": 8218
     },
     "end": {
-      "line": 198,
+      "line": 232,
       "column": 3,
-      "index": 7089
+      "index": 8277
     }
   },
   {
@@ -514,14 +619,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 199,
+      "line": 233,
       "column": 14,
-      "index": 7105
+      "index": 8293
     },
     "end": {
-      "line": 202,
+      "line": 236,
       "column": 3,
-      "index": 7164
+      "index": 8352
     }
   },
   {
@@ -529,14 +634,14 @@
     "defaultMessage": "!!!You have",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 205,
+      "line": 239,
       "column": 11,
-      "index": 7223
+      "index": 8411
     },
     "end": {
-      "line": 208,
+      "line": 242,
       "column": 3,
-      "index": 7318
+      "index": 8506
     }
   },
   {
@@ -544,14 +649,14 @@
     "defaultMessage": "!!!No assets found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 209,
+      "line": 243,
       "column": 12,
-      "index": 7332
+      "index": 8520
     },
     "end": {
-      "line": 212,
+      "line": 246,
       "column": 3,
-      "index": 7435
+      "index": 8623
     }
   },
   {
@@ -559,14 +664,14 @@
     "defaultMessage": "!!!found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 213,
+      "line": 247,
       "column": 9,
-      "index": 7446
+      "index": 8634
     },
     "end": {
-      "line": 216,
+      "line": 250,
       "column": 3,
-      "index": 7536
+      "index": 8724
     }
   },
   {
@@ -574,14 +679,14 @@
     "defaultMessage": "!!!Search tokens",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 217,
+      "line": 251,
       "column": 16,
-      "index": 7554
+      "index": 8742
     },
     "end": {
-      "line": 220,
+      "line": 254,
       "column": 3,
-      "index": 7650
+      "index": 8838
     }
   },
   {
@@ -589,14 +694,14 @@
     "defaultMessage": "!!!Select asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 221,
+      "line": 255,
       "column": 20,
-      "index": 7672
+      "index": 8860
     },
     "end": {
-      "line": 224,
+      "line": 258,
       "column": 3,
-      "index": 7761
+      "index": 8949
     }
   },
   {
@@ -604,14 +709,14 @@
     "defaultMessage": "!!!Confirm",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 225,
+      "line": 259,
       "column": 11,
-      "index": 7774
+      "index": 8962
     },
     "end": {
-      "line": 228,
+      "line": 262,
       "column": 3,
-      "index": 7868
+      "index": 9056
     }
   }
 ]
