--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -151,6 +151,7 @@
   "swap.swapScreen.swapMinReceivedTitle": "Min Received",
   "swap.swapScreen.enterSlippage": "Enter a value from 0% to 100%. You can also enter up to 1 decimal",
   "swap.swapScreen.poolVerification": "{pool} verification",
+  "swap.swapScreen.volume": "Volume, 24h",
   "components.common.navigation.nftGallery": "NFT Gallery",
   "components.receive.addressmodal.BIP32path": "Derivation path",
   "components.receive.addressmodal.copiedLabel": "Copied",
