--- a/apps/wallet-mobile/src/i18n/locales/fr-FR.json
+++ b/apps/wallet-mobile/src/i18n/locales/fr-FR.json
@@ -120,6 +120,7 @@
   "nft.navigation.title": "NFT galerie",
   "nft.navigation.search": "Recherche",
   "swap.swapScreen.swapTitle": "Swap",
+  "swap.swapScreen.batcherFee": "Frais de regroupement de transactions",
   "swap.swapScreen.tokenSwapTab": "Token swap",
   "swap.swapScreen.ordersSwapTab": "Orders",
   "swap.swapScreen.openOrders": "Open orders",
@@ -131,7 +132,7 @@
   "swap.swapScreen.currentBalance": "Current balance",
   "swap.swapScreen.selectToken": "Select token",
   "swap.swapScreen.marketPrice": "Market price",
-  "swap.swapScreen.limitPrice": "Limit price",
+  "swap.swapScreen.limitPrice": "Prix limite",
   "swap.swapScreen.slippageTolerance": "Slippage tolerance",
   "swap.swapScreen.slippageToleranceInfo": "Slippage tolerance is set as a percentage of the total swap value. Your transactions will not be executed if the price moves by more than this amount",
   "swap.swapScreen.selectPool": "Select pool",
@@ -139,15 +140,21 @@
   "swap.swapScreen.verifiedBadge": "verified badge",
   "swap.swapScreen.verifiedBy": "Verified by {pool}",
   "swap.swapScreen.poolVerificationInfo": "Cardano projects that list their own tokens can apply for an additional {pool} verification. This verification is a manual validation that {pool} team performs with the help of Cardano Foundation.",
+  "swap.swapScreen.poolFee": "Frais de pool",
   "swap.swapScreen.assetsIn": "This assets is in my portfolio",
   "swap.swapScreen.noAssetsFound": "No assets found for this pair",
   "swap.swapScreen.defaultSlippage": "Default Slippage Tolerance",
   "swap.swapScreen.slippageInfo": "Slippage tolerance is set as a percentage of the total swap value. Your transactions will not be executed if the price moves by more than this amount.",
   "swap.swapScreen.swapMinAda": "Min-ADA is the minimum ADA amount required to be contained when holding or sending Cardano native tokens.",
-  "swap.swapScreen.swapFees": "Swap fees include the following: • Matchmaker Fee • Frontend Fee • Liquidity Provider Fee",
+  "swap.swapScreen.swapMinAdaTitle": "Min ADA",
+  "swap.swapScreen.swapFees": "Swap fees include the following:\n • Matchmaker Fee\n • Frontend Fee\n • Liquidity Provider Fee",
+  "swap.swapScreen.swapFeesTitle": "Fee",
   "swap.swapScreen.swapMinReceived": "Minimum amount of tokens you can get because of the slippage tolerance.",
+  "swap.swapScreen.swapMinReceivedTitle": "Min Received",
   "swap.swapScreen.enterSlippage": "Enter a value from 0% to 100%. You can also enter up to 1 decimal",
   "swap.swapScreen.poolVerification": "{pool} verification",
+  "swap.swapScreen.volume": "Volume, 24h",
+  "swap.swapScreen.tvl": "Valeur totale verrouillée",
   "components.common.navigation.nftGallery": "NFT Galerie",
   "components.receive.addressmodal.BIP32path": "Voie de dérivation",
   "components.receive.addressmodal.copiedLabel": "Copié",
@@ -569,6 +576,7 @@
   "global.assets.assetLabel": "actif",
   "global.assets": "{qty, plural, one {asset} other {assets}}",
   "global.pools": "{qty, plural, one {pool} other {pools}}",
+  "global.price": "Prix",
   "global.availableFunds": "Fonds disponibles",
   "global.buy": "Acheter",
   "global.cancel": "Cancel",
